adição de marcações @author, @title, @data, @footer, @header e @chapterfooter para substituicao via parametros -a, -t, -d, -j, -f, -x, respectivamente

--- a/source/apostilator-classic/project-example/.tex/titlepage.tex
+++ b/source/apostilator-classic/project-example/.tex/titlepage.tex
@@ -14,15 +14,15 @@
   \begin{minipage}[c]{12cm}
     \begin{center}
 
-{\huge \sf Título da Apostila.\vskip 0.15cm
+{\huge \sf Título da Apostila.\vskip 0.15cm %% @title
 
-{\small Autor da Apostila}
+{\small Autor da Apostila} %% @author
 }
     \end{center}
   \end{minipage}
 
   \vskip 16cm
 
-  {\huge http://apostilator.sf.net}
+  {\huge Janeiro - 2012} %% @date
 
 \end{center}
