--- a/source/apostilator-classic/project-manual/.tex/titlepage.tex
+++ b/source/apostilator-classic/project-manual/.tex/titlepage.tex
@@ -14,15 +14,15 @@
   \begin{minipage}[c]{12cm}
     \begin{center}
 
-{\huge \sf Título da Apostila.\vskip 0.15cm
+{\huge \sf {Manual do Apostilator}\vskip 0.15cm %% @title
 
-{\small Autor da Apostila}
+{\small Reinaldo de Carvalho} %% @author
 }
     \end{center}
   \end{minipage}
 
   \vskip 16cm
 
-  {\huge http://apostilator.sf.net}
+  {\huge github.com/reinaldoc/apostilator} %% @date
 
 \end{center}
