--- a/source/apostilator-classic/project-example/.tex/base.tex
+++ b/source/apostilator-classic/project-example/.tex/base.tex
@@ -42,7 +42,8 @@
 \fancypagestyle{plain}{
 \fancyhf{}
 \renewcommand{\headrulewidth}{0pt}
-\fancyfoot[LE,RO]{\thepage}
+\fancyfoot[R]{\thepage}
+\fancyfoot[L]{\bf \small \slshape } %% @chapterfooter
 }
 
 \fancypagestyle{rcsfooters}
@@ -56,17 +57,13 @@
     %
     %\fancyhead[L]{\bf Curso III: Emacs}
     %\fancyhead[R]{\includegraphics[scale=0.25]{figs/capa.eps}}
-    \fancyhead[L]{}
+    \fancyhead[L]{} %% @header
     \fancyhead[R]{\bf \slshape \nouppercase{\leftmark}}
 
     \fancyfoot[R]{\thepage}
     \fancyfoot[C]{}
-    \fancyfoot[L]{}
+    \fancyfoot[L]{} %% @footer
 }
-
-\newcommand{\lpi}{\begin{wrapfigure}{l}{1.5cm}\centering \includegraphics[width=1.3cm]{titlepage-imgs/lpi.png} \end{wrapfigure}}
-\newcommand{\rh}{\begin{wrapfigure}{l}{1.5cm}\centering \includegraphics[width=1.3cm]{titlepage-imgs/redhat.png} \end{wrapfigure}}
-
 
 \begin{document}\pagestyle{rcsfooters}
 
