adição de marcações @author, @title, @data, @footer, @header e @chapterfooter para substituicao via parametros -a, -t, -d, -j, -f, -x, respectivamente

--- a/projects/Java Development/.tex/base.tex
+++ b/projects/Java Development/.tex/base.tex
@@ -44,7 +44,7 @@
 \fancyhf{}
 \renewcommand{\headrulewidth}{0pt}
 \fancyfoot[R]{\thepage}
-\fancyfoot[L]{\bf \small \slshape Tecnologias de Desenvolvimento J2EE}
+\fancyfoot[L]{\bf \small \slshape Tecnologias de Desenvolvimento J2EE} %% @chapterfooter
 }
 
 \fancypagestyle{rcsfooters}
@@ -58,12 +58,12 @@
     %
     %\fancyhead[L]{\bf Curso III: Emacs}
     %\fancyhead[R]{\includegraphics[scale=0.25]{figs/capa.eps}}
-    \fancyhead[L]{\bf Tecnologias J2EE}
+    \fancyhead[L]{\bf Tecnologias J2EE} %% @header
     \fancyhead[R]{\bf \slshape \nouppercase{\leftmark}}
 
     \fancyfoot[R]{\thepage}
     \fancyfoot[C]{}
-    \fancyfoot[L]{\bf \small \slshape Reinaldo de Carvalho - reinaldoc@gmail.com}
+    \fancyfoot[L]{\bf \small \slshape Reinaldo de Carvalho - reinaldoc@gmail.com} %% @footer
 }
 
 \newcommand{\lpi}{\begin{wrapfigure}{l}{1.5cm}\centering \includegraphics[width=1.3cm]{titlepage-imgs/lpi.png} \end{wrapfigure}}
