--- a/projects/Java Development/.tex/titlepage.tex
+++ b/projects/Java Development/.tex/titlepage.tex
@@ -15,15 +15,15 @@
   \begin{minipage}[c]{17cm}
     \begin{center}
 
-{\Huge \sf {Tecnologias de Desenvolvimento J2EE}\vskip 0.15cm
+{\huge \sf {wwwwwwwwwwww}\vskip 0.15cm %% @title
 
-{\large CTIC - Centro de Tecnologia da Informação e Comunicação (UFPA)}
+{\large CTIC - Centro de Tecnologia da Informação e Comunicação (UFPA)} %% @author
 }
     \end{center}
   \end{minipage}
 
   \vskip 11cm
 
-  {\Huge Dezembro 2011}
+  {\Huge Dezembro 2011} %%@date
 
 \end{center}
