--- a/source/apostilator-classic/ChangeLog
+++ b/source/apostilator-classic/ChangeLog
@@ -1,6 +1,21 @@
+
+20120119:
+- Requerida extensão .axml nos arquivos do projeto.
+- Listagem de arquivos Chapters.lst e Appendix.lst devem cnoter a extensão do arquivo.
+- Métodos revisados para diretório do projeto contendo espaços.
+- Implementação adequada da opção para gerar lista de chapters/appendix:
+    -l ,    --make-lst             Make chapters/appendix list sorted by name.
+- Novas opções:
+    -j=,    --set-header=          Set page header*.
+    -f=,    --set-footer=          Set page footer*.
+    -x=,    --set-chapter-footer=  Set chapter page footer*.
+  * Reinaldo de Carvalho <reinaldoc@gmail.com> 
+
+
 20100617:
 - Remoção do diretório .tex/titlepage-imgs, nomeando a figura da capa para titlepage.png.
 - Atualização do README, atualização dos nomes dos pacotes.
+  * Reinaldo de Carvalho <reinaldoc@gmail.com> 
 
 20090223:
 - Nova organização dos arquivos de projeto.
