--- a/projects/Java Development/.tex/titlepage.tex
+++ b/projects/Java Development/.tex/titlepage.tex
@@ -15,15 +15,15 @@
   \begin{minipage}[c]{17cm}
     \begin{center}
 
-{\huge \sf {wwwwwwwwwwww}\vskip 0.15cm %% @title
+{\huge \sf {Tecnologias de desenvolvimento em Java}\vskip 0.15cm %% @title
 
-{\large CTIC - Centro de Tecnologia da Informação e Comunicação (UFPA)} %% @author
+{\large Reinaldo Gil Lima de Carvalho} %% @author
 }
     \end{center}
   \end{minipage}
 
   \vskip 11cm
 
-  {\Huge Dezembro 2011} %%@date
+  {\huge Janeiro 2012} %% @date
 
 \end{center}
