--- a/projects/Java Development/Bibliography.bib
+++ b/projects/Java Development/Bibliography.bib
@@ -1,10 +1,10 @@
 
 @Article{FrontPageIMG,
-    title   =   "Urna estilizada (Image)" ,
-    author  =   "Website" ,
+    title   =   "Java Logo (Image)" ,
+    author  =   "Website Logo" ,
     journal =   "" ,
-    note    =   "http://ricdireito.blog.terra.com.br/files/2010/01/eleicoes1-300x248.jpg" ,
-    year    =   2010
+    note    =   "http://www.gemind.com.br/wp-content/uploads/2011/08/java\_logo2.jpg" ,
+    year    =   2012
 }
 
 @Article{Debian,
