--- a/source/apostilator-classic/project-example/.tex/titlepage.tex
+++ b/source/apostilator-classic/project-example/.tex/titlepage.tex
@@ -4,7 +4,7 @@
   \begin{figure}[H]
     \begin{center}
       \hspace{-1cm}
-      \includegraphics[width=0.55\columnwidth]{titlepage.png}
+      \includegraphics[width=0.30\columnwidth]{titlepage.png}
     \end{center}      
   \end{figure}
 
@@ -14,15 +14,15 @@
   \begin{minipage}[c]{12cm}
     \begin{center}
 
-{\huge \sf Título da Apostila.\vskip 0.15cm %% @title
+{\huge \sf Tutorial Postfix\vskip 0.15cm %% @title
 
-{\small Autor da Apostila} %% @author
+{\small Gabriel Silva Pinto} %% @author
 }
     \end{center}
   \end{minipage}
 
   \vskip 16cm
 
-  {\huge Janeiro - 2012} %% @date
+  {\huge Fevereiro - 2012} %% @date
 
 \end{center}
